# JPET_NoiseReduction

./: README.md
Accidental_Events_Monte_Carlo/: MC_coincidences.C  README.txt  Run_10w_60MBq.txt  act_output.txt  act_output_old.txt  activity_plot_norm.gnuplot  fit.txt  run_act_test.sh  testDTW.cpp  testData.root
Accidental_Events_Monte_Carlo/Old Files/: act_output_old.txt
Accidental_Events_Monte_Carlo/promptIntervals/: Intervals_511.txt
DTW_algorithm/: CMakeLists.txt  DTW.cpp  DTW_cpp.d  DTW_datainfo.cpp  DTW_prep.cpp  DTW_stats.txt  Origin_test  Origin_test.cpp  calc_lifetime.h  flatTrees.txt  helper_tools.cpp  helper_tools.h
load_data/: CMakeLists.txt  load_data.cpp
